# Project_OCR_PaddleLite_Linux

./: README.md
inference_lite_lib.with_log/: README.md
model_convert/en_PP-OCRv3_rec_infer/: en_dict.txt
ppocr/: CMakeLists.txt
ppocr/src/: db_post_process.cc  db_post_process.h  det_process.cc  det_process.h  ocr_pipeline.cc  rec_process.cc  rec_process.h
ppocr_det/: CMakeLists.txt
ppocr_det/src/: db_post_process.cc  main.cc
ppocr_rec/: CMakeLists.txt
ppocr_rec/models/: char_dict.txt
ppocr_rec/src/: main.cc
